# YOLOv10

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
app/hf/: config.json
build_kits/: cuda-12.4.1.dockerfile  openvino.dockerfile
