[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yolov10"
version = "0.0.1"
authors = [
    { name = "Nisse Knudsen", email = "nisse.knudsen@gmail.com" },
]
dependencies = [
    "make87",
    "make87_messages",
    "torch",
    "onnxruntime-gpu ; platform_machine == 'x86_64'",
    "onnxruntime ; platform_machine != 'x86_64'",
    "opencv-python-headless",
    "numpy",
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[tool.setuptools.package-data]
"app.hf" = ["*"]