[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
authors = [
    { name = "Nisse Knudsen", email = "nisse@make87.com" },
]
dependencies = [
    "make87[zenoh,protobuf]>=0.1.0-dev6",
    "make87_messages",
    "onnxruntime",
    "opencv-python-headless>=4.10.0,<5.0.0",
    "numpy",
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9,<3.13"

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu"
]
openvino = [
    "onnxruntime-openvino"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.hf" = ["*"]